Creacion del repositorio visita domiciliaria

--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List" target="_blanck">Propietarios de Mascotas</a>
                         </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Visita/List1" target="_blanck">Visita Domiciliaria</a>
+                        </li>
                     </ul>
                 </div>
             </div>
