--- a/MascotaFeliz.App.Presentacion/Pages/Index.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Mundo Paticas</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Somos una empresa especializada en el cuidado de tu mascota.<br>
+    Ofrecemos una alta gama de servicios de alta calidad y experiencia confortable para ti y tu peludito.</p>
 </div>
