--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -1,23 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <title>@ViewData["Title"]  MascotaFeliz</title>
-=======
+
     <title>@ViewData["Title"] MascotaFeliz</title>
->>>>>>> cad3c7003a16230f3db4be0c447b7e1635daf8f3
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
+
 <body>
-    <header >
+    <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">MascotaFeliz</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -26,13 +26,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-area="" asp-page="/Privacy">Formulario</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Formulario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List" target="_blanck">Propietarios de Mascotas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List"
+                                target="_blanck">Propietarios de Mascotas</a>
                         </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Visita/List1" target="_blanck">Visita Domiciliaria</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Visita/List1" target="_blanck">Visita
+                                Domiciliaria</a>
                         </li>
                     </ul>
                 </div>
@@ -57,4 +59,5 @@
 
     @RenderSection("Scripts", required: false)
 </body>
+
 </html>
