Sprint 3 implementacion de listas

--- a/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
@@ -44,6 +44,12 @@
             <td>
                 @Propietario.Direccion
             </td>
+            <td>
+                <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-propietariomascotasId="@Propietario.Id">
+                    <i class="fas  fa-info-circle"></i>
+                    Detalles Propietario
+                </a>
+            </td>
         </tr>
     }
 
