--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -37,12 +37,18 @@
                                 asp-page="/FormularioPropietario/Formulario2"  target="_blanck">Formulario Propietario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List"
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List" 
                                 target="_blanck">Propietarios de Mascotas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Visita/List1" target="_blanck">Visita
                                 Domiciliaria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Mascota/ListMascota" target="_blanck">Mascota</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Veterinario/ListVeterinario" target="_blanck">Veterinario</a>
                         </li>
                     </ul>
                 </div>
