--- a/MascotaFeliz.App.Presentacion/Pages/Mascota/ListMascota.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Mascota/ListMascota.cshtml
@@ -2,7 +2,7 @@
 @model MascotaFeliz.App.Presentacion.Pages.ListMascotaModel
 @{
 }
-<h1>Formulario de Mascotas</h1>
+@* <h1>Formulario de Mascotas</h1>
 <table class="table">
 
     <colgroup>
@@ -44,13 +44,13 @@
             <td>
                 @Mascota.TipoMascota
             </td>
-            @* <td>
+             <td>
                 <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-propietariomascotasId="@Propietario.Id">
                     <i class="fas  fa-info-circle"></i>
                     Detalles Propietario
                 </a>
-            </td> *@
+            </td> 
         </tr>
     }
 
-</table>
+</table> *@
