--- a/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Propietario/List.cshtml
@@ -46,8 +46,14 @@
             </td>
             <td>
                 <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-propietariomascotasId="@Propietario.Id">
-                    <i class="fas  fa-info-circle"></i>
+                    <i class="fas  fa-info-circle fa-lg"></i>
                     Detalles Propietario
+                </a>
+            </td>
+            <td>
+                <a class="btn btn-primary table-btn" asp-page="./EditPropietario" asp-route-propietariomascotasId="@Propietario.Id">
+                    <i class="fas  fa-address-book fa-lg" aria-hidden="true"></i>
+                    Editar Propietario
                 </a>
             </td>
         </tr>
