--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>@ViewData["Title"] MascotaFeliz</title>
-
+    <script src="http://kit.fontawsome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -45,11 +45,11 @@
                                 Domiciliaria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Mascota/ListMascota" target="_blanck">Mascota</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CMascota/ListMascota" target="_blanck">Mascota</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Veterinario/ListVeterinario" target="_blanck">Veterinario</a>
-                        </li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CVeterinario/ListVeterinario" target="_blanck">Veterinario</a>
+                        </li> 
                     </ul>
                 </div>
             </div>
