--- a/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -44,6 +44,15 @@
                                         asp-page="/FormularioPropietario/Formulario2" target="_blanck">Formulario
                                         Propietario</a>
                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area=""
+                                        asp-page="/FormularioMascota/Formulario3" target="_blanck">Formulario Mascota</a>
+                                </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area=""
+                                        asp-page="/FormularioVeterinario/Formulario4" target="_blanck">Formulario
+                                        Veterinario</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/List"
                                         target="_blanck">Propietarios de Mascotas</a>
