--- a/MascotaFeliz.App.Presentacion/wwwroot/css/estilos.css
+++ b/MascotaFeliz.App.Presentacion/wwwroot/css/estilos.css
@@ -277,7 +277,7 @@ margin-right: auto;
 .info1{
   font-family: 'Roboto';
   color: rgba(255, 255, 255, 0.8);
-  background: rgb(36, 186, 206);
+  background: #7ad653;
   padding: 20px 20px;
   box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
   border-radius: 10px;
